correcting docs typos

--- a/README.Rmd
+++ b/README.Rmd
@@ -53,7 +53,7 @@ For the climate change process, we can use a real climate reconstruction from th
 
 In order to simulate some data from the process, we need to set a few parameters. These include start and end times (any palaeo data science analysis involves setting bounds on time and space, of course) and an effective temporal resolution (also practically always necessary). For this simulated example, we can just select some arbitrary interval that covers the time spanned by the climate data and use the climate dataset's existing temporal resolution (centennial). These temporal parameters establish a time-series grid that REC models (like any count-based time-series model) needs in order to pair dependent and independent variable measurements. The recm package will take the time grid as an argument as well (`t_edges`), so we need to prepare it in advance anyway.
 
-It is important to ensure that the temporal grid and the covariates are running in the same temporal direction (either with time increasing into the past or toward the present). So, below, I've arranged the grid and the climate reconstruction so that time is moving from left-to-right (for the grid) and top-to-bottom for the `X` matrix. Age, though, will be decreasing because the calendar is in years BP, so the `t_grid` vector will contain a series of decreasing values. If this order is confused (e.g., the time direction of `t_grid` and the sequence of values in `x` are reversed relative to one another) the regression coefficient(s) in a REC model would have the wrong sign.
+It is important to ensure that the temporal grid and the covariates are running in the same temporal direction (either with time increasing into the past or toward the present). So, below, I've arranged the grid and the climate reconstruction so that time is moving from left-to-right (for the grid) and top-to-bottom for the `X` matrix. Age, though, will be decreasing because the calendar is in years BP, so the `t_grid` vector will contain a series of decreasing values. If this order is confused---the time direction of `t_grid` and the sequence of values in `x` are reversed relative to one another---the regression coefficient(s) in a REC model would have the wrong sign.
 
 The other two key parameters, of course, are the regression coefficients for the intercept and climate covariate, $\beta_0, \beta_1$ (b0 and b1, respectively). Note that the `X` matrix below has as its first column a vector of 1's. This column represents the intercept for the model and should probably always be included. The second column contains the temperature reconstruction time-series (scaled and centered).
 
@@ -130,7 +130,7 @@ burnin = 1:floor(dim(mysamples_adapt$scales)[1] * 0.25)
 newscales <- colMeans(mysamples_adapt$scales[-burnin, ])
 ```
 
-After removing some burn-in, we can then take an average of the scales tried by the adaptive algorithm and pass those as the `scales` argument to the `recm()` function with `adapt = F`. In this case, the scales refer to the proposal distributions for the two regression coefficients in the model, b0 and b1. The scales tried by the MCMC are returned in a matrix (`$scales`) where the columns are ordered in a way that mirrors the ordering of columns in the `X` matrix---so `$scales[1]` refers to the intercept and `$scales[1]` refers to the climate covariate regression coefficient. The same ordering occurs in the MCMC samples matrix (`$samples`) but that matrix also contains a column for the posterior samples for event times corresponding to each radiocarbon date and they are ordered following the descending order of events in `dates`.
+After removing some burn-in, we can then take an average of the scales tried by the adaptive algorithm and pass those as the `scales` argument to the `recm()` function with `adapt = F`. In this case, the scales refer to the proposal distributions for the two regression coefficients in the model, b0 and b1. The scales tried by the MCMC are returned in a matrix (`$scales`) where the columns are ordered in a way that mirrors the ordering of columns in the `X` matrix---so `$scales[1]` refers to the intercept and `$scales[2]` refers to the climate covariate regression coefficient. The same ordering occurs in the MCMC samples matrix (`$samples`) but that matrix also contains a column for the posterior samples for event times corresponding to each radiocarbon date and they are ordered following the descending order of events in `dates`.
 
 ```{r recm-main}
 mysamples <- recm(dates,
@@ -180,6 +180,8 @@ Some differences between the two should be expected because of the low number of
 
 3. It is also worth highlighting that increasing the number of events/radiocarbon-dates will increase computation times and likely require longer MCMC runs (more iterations) to arrive at good estimates for model posteriors. When `adapt = T`, the `recm()` function returns a list that includes acceptance rates and scales along with posterior samples (MCMC chains) that can be used to help diagnose convergence problems.
 
-4. The MCMC should be run for much longer than it was in the demo above in order to obtain a good estimate for model's posteriors. In practice, tens of thousands of iterations should be used at least.
+4. The MCMC should be run for much longer than it was in the demo above in order to obtain a good estimate for model's posteriors. In practice, hundreds of thousands of iterations may be needed, especially for large numbers of radiocarbon dates.
+
+5. At the moment, it is unclear whether the change in variables from $t$ calendar (calibrated) dates to $y$ counts requires a Jacobian adjustment. This issue is currently being investigated and any suggestions would be most welcome.
 
 # References
